--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -105,6 +105,16 @@ body {
     background-color: #333;
   }
 }
+@media (max-width: 1250px) {
+  #header__content {
+    background-size: cover;
+  }
+}
+@media (max-width: 560px) {
+  #header_content {
+    width: 100vw;
+  }
+}
 
 #main-nav #contacts a:hover {
   text-decoration: none;
