--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -25,7 +25,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: url(./images/zz.jpg);
+  background-image: url(./images/bbb.jpg);
 
   color: white;
   height: 95vh;
