--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -6,6 +6,7 @@ body {
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
+  font-family: "Carter One", cursive;
 }
 
 /* scrollSpy */
