--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -387,3 +387,40 @@ ul li i:after {
     justify-content: flex-start;
   }
 }
+.ivi {
+  text-align: center;
+}
+@media (max-width: 560px) {
+  #header_content {
+    width: 100vw;
+  }
+}
+@media (max-width: 560px) {
+  .font {
+    font-size: 26px;
+    font-weight: 700;
+  }
+}
+@media (max-width: 560px) {
+  .pont {
+    font-size: 26px;
+    font-weight: 700;
+
+    text-align: center;
+  }
+}
+@media (max-width: 560px) {
+  .fontr {
+    font-size: 20px;
+    font-weight: 700;
+
+    text-align: center;
+  }
+}
+@media (max-width: 560px) {
+  .ponts {
+    font-size: 26px;
+    font-weight: 700;
+    text-align: center;
+  }
+}
