--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -29,7 +29,7 @@ body {
   background-image: url(./images/zz.jpg);
 
   color: white;
-  height: 95vh;
+  min-height: 100vh;
 
   display: flex;
   align-items: center;
