--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -26,7 +26,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: url(./images/zz.jpg);
+  background-image: url(./images/zz.jpg) 100vh;
 
   color: white;
   min-height: 100vh;
