--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -193,6 +193,12 @@ section {
   color: #eee;
   margin: 1%;
 }
+@media (max-width: 560px) {
+  #section-services {
+    background-attachment: local;
+  }
+}
+
 #section-gallery {
   background-repeat: no-repeat;
   background-position: top center;
@@ -202,6 +208,11 @@ section {
   margin: 1%;
   background-attachment: fixed;
 }
+@media (max-width: 560px) {
+  #section-gallery {
+    background-attachment: local;
+  }
+}
 #section-prices {
   background-repeat: no-repeat;
   background-position: center;
@@ -210,6 +221,11 @@ section {
   background-attachment: fixed;
   color: black;
   margin: 1%;
+}
+@media (max-width: 560px) {
+  #section-prices {
+    background-attachment: local;
+  }
 }
 #section-about {
   /*background: url(./images/fff.jpg);
