--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -446,7 +446,7 @@ ul li i:after {
     text-align: center;
   }
 }
-@media (max-width: 560px) {
-   {
-  }
-}
+-moz-background-size: 100%; /* Firefox 3.6+ */
+-webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
+-o-background-size: 100%; /* Opera 9.6+ */
+background-size: 100%; /* Современные браузеры */
