--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -175,7 +175,7 @@ section {
   background-image: url("./images/zz.jpg");
   background-repeat: no-repeat;
   background-position: 100% 0;
-  background-size: contain;
+  background-size: cover;
   background-attachment: fixed;
   -moz-background-size: 100%; /* Firefox 3.6+ */
   -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
