--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -171,7 +171,7 @@ section {
   opacity: 0.6;
 }
 #header__content {
-  background-color: #2c222d;
+  background-color: white;
   background-image: url("./images/zz.jpg");
   background-repeat: no-repeat;
   background-position: 100% 0;
@@ -183,6 +183,7 @@ section {
   background-size: 100%; /* Современные браузеры */
 
   color: white;
+  -webkit-text-stroke: 1px #000000;
   height: 60vh;
 
   display: flex;
