--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -172,7 +172,7 @@ section {
 }
 #header__content {
   background-color: white;
-  background-image: url("./images/zz.jpg");
+  background-image: url("./images/bbb.jpg");
   background-repeat: no-repeat;
   background-position: 100% 0;
   background-size: cover;
