--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -184,7 +184,6 @@ section {
 
   color: white;
   -webkit-text-stroke: 1px #000000;
-  height: 60vh;
 
   display: flex;
   align-items: center;
@@ -420,6 +419,7 @@ ul li i:after {
 @media (max-width: 560px) {
   #header_content {
     width: 100vw;
+    -webkit-text-stroke: 0.3px #000000;
   }
 }
 @media (max-width: 560px) {
