--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -420,7 +420,8 @@ ul li i:after {
   #header_content {
     width: 100vw;
     height: 100vh;
-    -webkit-text-stroke: 0.3px #000000;
+    color: #000;
+    margin-top: 30px;
   }
 }
 @media (max-width: 560px) {
