--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -182,6 +182,7 @@ section {
     width: 100vw;
     height: 100vh;
     -webkit-text-stroke: 0.3px #000000;
+    background-size: cover;
   }
 }
 #section-services {
