--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -158,10 +158,14 @@ section {
   background-attachment: fixed;
   min-height: 100vh;
   color: white;
-  -webkit-text-stroke: 1px #000000;
 
   display: flex;
   align-items: center;
+}
+@media (max-width: 560px) {
+  #header__content {
+    background-attachment: local;
+  }
 }
 
 #section-services {
