--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -243,6 +243,15 @@
 
 </section>
 <section id="section-contacts" class="section-common">
+  <wrapper>
+    <div class="dws">
+        <div class="pulse">
+            <div class="bloc"></div>
+            <div class="phone"><i class="fa fa-phone" aria-hidden="true"></i></div>
+            <div class="text">Кнопка связи</div>
+        </div>
+    </div>
+</wrapper>
   <div class="section-common__title container">
     <h2>Контакты</h2>
   </div>
