--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -238,20 +238,22 @@
     </div>
     </divc>
 </section>
-
-
-
-</section>
-<section id="section-contacts" class="section-common">
+<section class="phones">
   <wrapper>
     <div class="dws">
         <div class="pulse">
             <div class="bloc"></div>
             <div class="phone"><i class="fa fa-phone" aria-hidden="true"></i></div>
-            <div class="text">Кнопка связи</div>
+            <div class="text">Запись</div>
         </div>
     </div>
 </wrapper>
+</section>
+
+
+</section>
+<section id="section-contacts" class="section-common">
+ 
   <div class="section-common__title container">
     <h2>Контакты</h2>
   </div>
