--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -238,17 +238,11 @@
     </div>
     </divc>
 </section>
-<section class="phones">
-  
-    <div class="dws">
-        <div class="pulse">
-            <div class="bloc"></div>
-            <div class="phone"><i class="fa fa-phone" aria-hidden="true"></i></div>
-            <div class="text">Запись</div>
-        </div>
-    </div>
-
-</section>
+<div type="button" class="callback-bt">
+  <div class="text-call">
+      <i class="fa fa-phone"></i>
+      <span>Заказать<br>звонок</span>
+  </div>
 
 
 </section>
