--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -238,6 +238,8 @@
     </div>
     </divc>
 </section>
+
+<section></section>
 <div type="button" class="callback-bt">
   <div class="text-call">
       <i class="fa fa-phone"></i>
