--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -236,14 +236,14 @@
 
       </div>
     </div>
-    </divc>
+    </div>
 </section>
 
-<section></section>
+<section>
 <div type="button" class="callback-bt">
   <div class="text-call">
       <i class="fa fa-phone"></i>
-      <span>Заказать<br>звонок</span>
+      <span>запись</span>
   </div>
 
 
