--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -239,7 +239,7 @@
     </div>
 </section>
 
-<section>
+<section class="kal">
 <div type="button" class="callback-bt">
   <div class="text-call">
       <i class="fa fa-phone"></i>
