--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -442,20 +442,22 @@ ul li i:after {
 
 .callback-bt {
   background: #38a3fd;
-  border: 2px solid #38a3fd;
+
+  opacity: 0.7;
   border-radius: 50%;
   box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3);
   cursor: pointer;
   height: 68px;
   text-align: center;
   width: 68px;
-  position: ;
-  right: 8%;
+  position: fixed;
+  left: 4%;
   bottom: 18%;
   z-index: 999;
   transition: 0.3s;
   -webkit-animation: hoverWave linear 1s infinite;
   animation: hoverWave linear 1s infinite;
+  border-radius: 50%;
 }
 
 .callback-bt .text-call {
@@ -669,4 +671,7 @@ ul li i:after {
     -webkit-transform: rotateZ(0deg);
   }
 }
-/* конец кнопки звонка */
+.kal {
+  display: grid;
+  justify-content: center;
+}
