--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -240,7 +240,10 @@
 </section>
 
 <section class="kal">
-<div type="button" class="callback-bt">
+<div type="button"
+class="btn  mr-3"
+data-toggle="modal"
+data-target="#exampleModal" class="callback-bt">
   <div class="text-call">
       <i class="fa fa-phone"></i>
       <span>запись</span>
