--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -54,13 +54,19 @@
       {% include 'includes/main.html' %}
       <div id="header__content">
         <div class="container text-center">
-          <h1 class="wow bounceInLeft " data-wow-delay="0.5s">"Beauty Room"</h1>
+          {% if page_title %}
+          <h1 class="wow bounceInLeft " data-wow-delay="0.5s">
+            {{ page_title }}
+          </h1>
+          {% endif %}
+
           <br />
+          {% if page_descr %}
           <h3 class="wow bounceInUp " data-wow-delay="0.6s">
-            Студия красоты
+            {{ page_descr }}
           </h3>
-          {% with massages = get_flashed_messages(with_categories=true) %} {% if
-          massages %}
+          {% endif %} {% with massages =
+          get_flashed_messages(with_categories=true) %} {% if massages %}
           <div class="container mt-4">
             {% for category, message in massages %}
             <div
