--- a/app/templates/includes/og_tags.html
+++ b/app/templates/includes/og_tags.html
@@ -3,5 +3,5 @@
 <meta property="og:description" content="{{ site_description }}" />
 <meta
   property="og:image"
-  content="{{ url_for('static', filename='images/beauty-bg.jpg') }}"
+  content="{{ url_for('static', filename='images/zz.jpg') }}"
 />
