--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -240,16 +240,12 @@
 </section>
 
 <section class="kal">
-<div type="button"
-
-data-toggle="modal"
-data-target="#exampleModal" class="callback-bt">
-  <div class="text-call">
-      <i class="fa fa-phone"></i>
-      <span>запись</span>
-  </div>
-
-
+  <div type="button" class="callback-bt">
+    <div class="text-call">
+        <i class="fa fa-phone"></i>
+        <span>Запись</span>
+    </div>
+</div>
 </section>
 <section id="section-contacts" class="section-common">
  
