--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -441,9 +441,9 @@ ul li i:after {
 /*кнопка звонка*/
 
 .callback-bt {
-  background: green;
+  background: #38a3fd;
   border: solid;
-  border-radius: 50%;
+  border-radius: 150%;
   box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3);
   cursor: pointer;
   height: 68px;
@@ -456,7 +456,6 @@ ul li i:after {
   transition: 0.3s;
   -webkit-animation: hoverWave linear 1s infinite;
   animation: hoverWave linear 1s infinite;
-  border-radius: 50%;
 }
 
 .callback-bt .text-call {
