--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -240,7 +240,8 @@
 </section>
 
 <section class="kal">
-  <div type="button" class="callback-bt">
+  <div type="button" class="callback-bt rounded-circle
+  ">
     <div class="text-call">
         <i class="fa fa-phone"></i>
         <span>Запись</span>
