--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,8 +27,9 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
+
     <link
-      href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap"
+      href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap/Oswald&subset=cyrillic-ext"
       rel="stylesheet"
     />
     <link
