--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,7 @@
     />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap/Oswald&subset=cyrillic-ext"
+      href="https://fonts.googleapis.com/css?family=Carter+One&display=swap"
       rel="stylesheet"
     />
     <link
