--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -240,11 +240,12 @@
 </section>
 
 <section class="kal">
-  <div type="button" class="callback-bt rounded-circle
-  ">
+  <div type="button" class="callback-bt">
     <div class="text-call">
+      <a href="https://wa.me/79370969944/" target="_blank">
         <i class="fa fa-phone"></i>
-        <span>Запись</span>
+      </a>
+        <span>Записаться</span>
     </div>
 </div>
 </section>
