--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -238,14 +238,22 @@
     </div>
     </div>
 </section>
+<button
+type="button"
+class="btn  mr-3"
+data-toggle="modal"
+data-target="#exampleModal"
+>
+Записаться
+</button>
 
 <section class="kal">
-  <div type="button" class="callback-bt">
+  <div type="button" class="btn "
+  data-toggle="modal"
+  data-target="#exampleModal">
     <div class="text-call">
-      <a href="https://wa.me/79370969944/" target="_blank">
-        <i class="fa fa-phone"></i>
-      </a>
-        <span>Записаться</span>
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+        <span>Запись</span>
     </div>
 </div>
 </section>
