--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -438,27 +438,28 @@ ul li i:after {
     text-align: center;
   }
 }
-/*кнопка звонка*/
 
-.callback-bt {
-  background: #38a3fd;
-  border: 2px solid #38a3fd;
+/*кнопка обратной связи*/
+
+.email-bt {
+  background: #f95c18;
+  border: 2px solid #f95c18;
   border-radius: 50%;
-  box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3);
+  box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3);
   cursor: pointer;
   height: 68px;
   text-align: center;
   width: 68px;
   position: fixed;
-  right: 8%;
+  left: 8%;
   bottom: 18%;
   z-index: 999;
   transition: 0.3s;
-  -webkit-animation: hoverWave linear 1s infinite;
-  animation: hoverWave linear 1s infinite;
+  -webkit-animation: email-an linear 1s infinite;
+  animation: email-an linear 1s infinite;
 }
 
-.callback-bt .text-call {
+.email-bt .text-call {
   height: 68px;
   width: 68px;
   border-radius: 50%;
@@ -466,9 +467,9 @@ ul li i:after {
   overflow: hidden;
 }
 
-.callback-bt .text-call span {
+.email-bt .text-call span {
   text-align: center;
-  color: #38a3fd;
+  color: #f95c18;
   opacity: 0;
   font-size: 0;
   position: absolute;
@@ -481,312 +482,104 @@ ul li i:after {
   font-family: "montserrat", Arial, Helvetica, sans-serif;
 }
 
-.callback-bt .text-call:hover span {
+.email-bt .text-call:hover span {
   opacity: 1;
   font-size: 11px;
 }
-.callback-bt:hover i {
+.email-bt:hover i {
   display: none;
 }
 
-.callback-bt:hover {
+.email-bt:hover {
   z-index: 1;
   background: #fff;
-  color: transparent;
   transition: 0.3s;
 }
-.callback-bt:hover i {
+.email-bt:hover i {
   color: #38a3fd;
   font-size: 40px;
   transition: 0.3s;
 }
-.callback-bt i {
+.email-bt i {
   color: #fff;
-  font-size: 34px;
+  font-size: 29px;
   transition: 0.3s;
   line-height: 66px;
-  transition: 0.5s ease-in-out;
 }
 
-.callback-bt i {
-  animation: 1200ms ease 0s normal none 1 running shake;
-  animation-iteration-count: infinite;
-  -webkit-animation: 1200ms ease 0s normal none 1 running shake;
-  -webkit-animation-iteration-count: infinite;
+.email-bt i {
+  -webkit-animation: opsimple 3s infinite;
+  animation: opsimple 3s infinite;
 }
 
-@-webkit-keyframes hoverWave {
+@-webkit-keyframes email-an {
   0% {
-    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
-      0 0 0 0 rgba(56, 163, 253, 0.2), 0 0 0 0 rgba(56, 163, 253, 0.2);
+    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
+      0 0 0 0 rgba(249, 92, 24, 0.2), 0 0 0 0 rgba(249, 92, 24, 0.2);
   }
   40% {
-    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
-      0 0 0 15px rgba(56, 163, 253, 0.2), 0 0 0 0 rgba(56, 163, 253, 0.2);
+    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
+      0 0 0 15px rgba(249, 92, 24, 0.2), 0 0 0 0 rgba(249, 92, 24, 0.2);
   }
   80% {
-    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
-      0 0 0 30px rgba(56, 163, 253, 0), 0 0 0 26.7px rgba(56, 163, 253, 0.067);
+    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
+      0 0 0 30px rgba(249, 92, 24, 0), 0 0 0 26.7px rgba(249, 92, 24, 0.067);
   }
   100% {
-    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
-      0 0 0 30px rgba(56, 163, 253, 0), 0 0 0 40px rgba(56, 163, 253, 0);
+    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
+      0 0 0 30px rgba(249, 92, 24, 0), 0 0 0 40px rgba(249, 92, 24, 0);
   }
 }
-@keyframes hoverWave {
+@keyframes email-an {
   0% {
-    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
-      0 0 0 0 rgba(56, 163, 253, 0.2), 0 0 0 0 rgba(56, 163, 253, 0.2);
+    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
+      0 0 0 0 rgba(249, 92, 24, 0.2), 0 0 0 0 rgba(249, 92, 24, 0.2);
   }
   40% {
-    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
-      0 0 0 15px rgba(56, 163, 253, 0.2), 0 0 0 0 rgba(56, 163, 253, 0.2);
+    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
+      0 0 0 15px rgba(249, 92, 24, 0.2), 0 0 0 0 rgba(249, 92, 24, 0.2);
   }
   80% {
-    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
-      0 0 0 30px rgba(56, 163, 253, 0), 0 0 0 26.7px rgba(56, 163, 253, 0.067);
+    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
+      0 0 0 30px rgba(249, 92, 24, 0), 0 0 0 26.7px rgba(249, 92, 24, 0.067);
   }
   100% {
-    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
-      0 0 0 30px rgba(56, 163, 253, 0), 0 0 0 40px rgba(56, 163, 253, 0);
+    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
+      0 0 0 30px rgba(249, 92, 24, 0), 0 0 0 40px rgba(249, 92, 24, 0);
   }
 }
 
-/* animations icon */
-
-@keyframes shake {
+@keyframes opsimple {
   0% {
-    transform: rotateZ(0deg);
-    -ms-transform: rotateZ(0deg);
-    -webkit-transform: rotateZ(0deg);
-  }
-  10% {
-    transform: rotateZ(-30deg);
-    -ms-transform: rotateZ(-30deg);
-    -webkit-transform: rotateZ(-30deg);
-  }
-  20% {
-    transform: rotateZ(15deg);
-    -ms-transform: rotateZ(15deg);
-    -webkit-transform: rotateZ(15deg);
-  }
-  30% {
-    transform: rotateZ(-10deg);
-    -ms-transform: rotateZ(-10deg);
-    -webkit-transform: rotateZ(-10deg);
+    opacity: 0;
   }
   40% {
-    transform: rotateZ(7.5deg);
-    -ms-transform: rotateZ(7.5deg);
-    -webkit-transform: rotateZ(7.5deg);
+    opacity: 1;
   }
-  50% {
-    transform: rotateZ(-6deg);
-    -ms-transform: rotateZ(-6deg);
-    -webkit-transform: rotateZ(-6deg);
-  }
-  60% {
-    transform: rotateZ(5deg);
-    -ms-transform: rotateZ(5deg);
-    -webkit-transform: rotateZ(5deg);
-  }
-  70% {
-    transform: rotateZ(-4.28571deg);
-    -ms-transform: rotateZ(-4.28571deg);
-    -webkit-transform: rotateZ(-4.28571deg);
-  }
+
   80% {
-    transform: rotateZ(3.75deg);
-    -ms-transform: rotateZ(3.75deg);
-    -webkit-transform: rotateZ(3.75deg);
-  }
-  90% {
-    transform: rotateZ(-3.33333deg);
-    -ms-transform: rotateZ(-3.33333deg);
-    -webkit-transform: rotateZ(-3.33333deg);
+    opacity: 1;
   }
   100% {
-    transform: rotateZ(0deg);
-    -ms-transform: rotateZ(0deg);
-    -webkit-transform: rotateZ(0deg);
+    opacity: 0;
   }
 }
 
-@-webkit-keyframes shake {
+@-webkit-keyframes opsimple {
   0% {
-    transform: rotateZ(0deg);
-    -ms-transform: rotateZ(0deg);
-    -webkit-transform: rotateZ(0deg);
-  }
-  10% {
-    transform: rotateZ(-30deg);
-    -ms-transform: rotateZ(-30deg);
-    -webkit-transform: rotateZ(-30deg);
-  }
-  20% {
-    transform: rotateZ(15deg);
-    -ms-transform: rotateZ(15deg);
-    -webkit-transform: rotateZ(15deg);
-  }
-  30% {
-    transform: rotateZ(-10deg);
-    -ms-transform: rotateZ(-10deg);
-    -webkit-transform: rotateZ(-10deg);
+    opacity: 0;
   }
   40% {
-    transform: rotateZ(7.5deg);
-    -ms-transform: rotateZ(7.5deg);
-    -webkit-transform: rotateZ(7.5deg);
-  }
-  50% {
-    transform: rotateZ(-6deg);
-    -ms-transform: rotateZ(-6deg);
-    -webkit-transform: rotateZ(-6deg);
-  }
-  60% {
-    transform: rotateZ(5deg);
-    -ms-transform: rotateZ(5deg);
-    -webkit-transform: rotateZ(5deg);
-  }
-  70% {
-    transform: rotateZ(-4.28571deg);
-    -ms-transform: rotateZ(-4.28571deg);
-    -webkit-transform: rotateZ(-4.28571deg);
+    opacity: 1;
   }
   80% {
-    transform: rotateZ(3.75deg);
-    -ms-transform: rotateZ(3.75deg);
-    -webkit-transform: rotateZ(3.75deg);
-  }
-  90% {
-    transform: rotateZ(-3.33333deg);
-    -ms-transform: rotateZ(-3.33333deg);
-    -webkit-transform: rotateZ(-3.33333deg);
+    opacity: 1;
   }
   100% {
-    transform: rotateZ(0deg);
-    -ms-transform: rotateZ(0deg);
-    -webkit-transform: rotateZ(0deg);
+    opacity: 0;
   }
 }
-/* конец кнопки звонка */
-
-@keyframes shake {
-  0% {
-    transform: rotateZ(0deg);
-    -ms-transform: rotateZ(0deg);
-    -webkit-transform: rotateZ(0deg);
-  }
-  10% {
-    transform: rotateZ(-30deg);
-    -ms-transform: rotateZ(-30deg);
-    -webkit-transform: rotateZ(-30deg);
-  }
-  20% {
-    transform: rotateZ(15deg);
-    -ms-transform: rotateZ(15deg);
-    -webkit-transform: rotateZ(15deg);
-  }
-  30% {
-    transform: rotateZ(-10deg);
-    -ms-transform: rotateZ(-10deg);
-    -webkit-transform: rotateZ(-10deg);
-  }
-  40% {
-    transform: rotateZ(7.5deg);
-    -ms-transform: rotateZ(7.5deg);
-    -webkit-transform: rotateZ(7.5deg);
-  }
-  50% {
-    transform: rotateZ(-6deg);
-    -ms-transform: rotateZ(-6deg);
-    -webkit-transform: rotateZ(-6deg);
-  }
-  60% {
-    transform: rotateZ(5deg);
-    -ms-transform: rotateZ(5deg);
-    -webkit-transform: rotateZ(5deg);
-  }
-  70% {
-    transform: rotateZ(-4.28571deg);
-    -ms-transform: rotateZ(-4.28571deg);
-    -webkit-transform: rotateZ(-4.28571deg);
-  }
-  80% {
-    transform: rotateZ(3.75deg);
-    -ms-transform: rotateZ(3.75deg);
-    -webkit-transform: rotateZ(3.75deg);
-  }
-  90% {
-    transform: rotateZ(-3.33333deg);
-    -ms-transform: rotateZ(-3.33333deg);
-    -webkit-transform: rotateZ(-3.33333deg);
-  }
-  100% {
-    transform: rotateZ(0deg);
-    -ms-transform: rotateZ(0deg);
-    -webkit-transform: rotateZ(0deg);
-  }
-}
-
-@-webkit-keyframes shake {
-  0% {
-    transform: rotateZ(0deg);
-    -ms-transform: rotateZ(0deg);
-    -webkit-transform: rotateZ(0deg);
-  }
-  10% {
-    transform: rotateZ(-30deg);
-    -ms-transform: rotateZ(-30deg);
-    -webkit-transform: rotateZ(-30deg);
-  }
-  20% {
-    transform: rotateZ(15deg);
-    -ms-transform: rotateZ(15deg);
-    -webkit-transform: rotateZ(15deg);
-  }
-  30% {
-    transform: rotateZ(-10deg);
-    -ms-transform: rotateZ(-10deg);
-    -webkit-transform: rotateZ(-10deg);
-  }
-  40% {
-    transform: rotateZ(7.5deg);
-    -ms-transform: rotateZ(7.5deg);
-    -webkit-transform: rotateZ(7.5deg);
-  }
-  50% {
-    transform: rotateZ(-6deg);
-    -ms-transform: rotateZ(-6deg);
-    -webkit-transform: rotateZ(-6deg);
-  }
-  60% {
-    transform: rotateZ(5deg);
-    -ms-transform: rotateZ(5deg);
-    -webkit-transform: rotateZ(5deg);
-  }
-  70% {
-    transform: rotateZ(-4.28571deg);
-    -ms-transform: rotateZ(-4.28571deg);
-    -webkit-transform: rotateZ(-4.28571deg);
-  }
-  80% {
-    transform: rotateZ(3.75deg);
-    -ms-transform: rotateZ(3.75deg);
-    -webkit-transform: rotateZ(3.75deg);
-  }
-  90% {
-    transform: rotateZ(-3.33333deg);
-    -ms-transform: rotateZ(-3.33333deg);
-    -webkit-transform: rotateZ(-3.33333deg);
-  }
-  100% {
-    transform: rotateZ(0deg);
-    -ms-transform: rotateZ(0deg);
-    -webkit-transform: rotateZ(0deg);
-  }
-}
-/* конец кнопки звонка */
+/* конец кнопки связи */
 .kal {
   display: grid;
   justify-content: center;
