--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -248,13 +248,13 @@ data-target="#exampleModal"
 </button>
 
 <section class="kal">
-  <div type="button" class="btn "
-  data-toggle="modal"
-  data-target="#exampleModal">
+  <div type="button" class="callback-bt">
+    <a href="tel:{{ site_phone }}">
     <div class="text-call">
-        <i class="fa fa-envelope" aria-hidden="true"></i>
-        <span>Запись</span>
+        <i class="fa fa-phone"></i>
+        <span>Записаться</span>
     </div>
+  </a>
 </div>
 </section>
 <section id="section-contacts" class="section-common">
