--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -439,27 +439,27 @@ ul li i:after {
   }
 }
 
-/*кнопка обратной связи*/
+/*кнопка звонка*/
 
-.email-bt {
-  background: #f95c18;
-  border: 2px solid #f95c18;
+.callback-bt {
+  background: #38a3fd;
+  border: 2px solid #38a3fd;
   border-radius: 50%;
-  box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3);
+  box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3);
   cursor: pointer;
   height: 68px;
   text-align: center;
   width: 68px;
-  position: fixed;
-  left: 8%;
+
+  right: 8%;
   bottom: 18%;
   z-index: 999;
   transition: 0.3s;
-  -webkit-animation: email-an linear 1s infinite;
-  animation: email-an linear 1s infinite;
+  -webkit-animation: hoverWave linear 1s infinite;
+  animation: hoverWave linear 1s infinite;
 }
 
-.email-bt .text-call {
+.callback-bt .text-call {
   height: 68px;
   width: 68px;
   border-radius: 50%;
@@ -467,9 +467,9 @@ ul li i:after {
   overflow: hidden;
 }
 
-.email-bt .text-call span {
+.callback-bt .text-call span {
   text-align: center;
-  color: #f95c18;
+  color: #38a3fd;
   opacity: 0;
   font-size: 0;
   position: absolute;
@@ -482,104 +482,196 @@ ul li i:after {
   font-family: "montserrat", Arial, Helvetica, sans-serif;
 }
 
-.email-bt .text-call:hover span {
+.callback-bt .text-call:hover span {
   opacity: 1;
   font-size: 11px;
 }
-.email-bt:hover i {
+.callback-bt:hover i {
   display: none;
 }
 
-.email-bt:hover {
+.callback-bt:hover {
   z-index: 1;
   background: #fff;
+  color: transparent;
   transition: 0.3s;
 }
-.email-bt:hover i {
+.callback-bt:hover i {
   color: #38a3fd;
   font-size: 40px;
   transition: 0.3s;
 }
-.email-bt i {
+.callback-bt i {
   color: #fff;
-  font-size: 29px;
+  font-size: 34px;
   transition: 0.3s;
   line-height: 66px;
+  transition: 0.5s ease-in-out;
 }
 
-.email-bt i {
-  -webkit-animation: opsimple 3s infinite;
-  animation: opsimple 3s infinite;
+.callback-bt i {
+  animation: 1200ms ease 0s normal none 1 running shake;
+  animation-iteration-count: infinite;
+  -webkit-animation: 1200ms ease 0s normal none 1 running shake;
+  -webkit-animation-iteration-count: infinite;
 }
 
-@-webkit-keyframes email-an {
+@-webkit-keyframes hoverWave {
   0% {
-    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
-      0 0 0 0 rgba(249, 92, 24, 0.2), 0 0 0 0 rgba(249, 92, 24, 0.2);
+    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
+      0 0 0 0 rgba(56, 163, 253, 0.2), 0 0 0 0 rgba(56, 163, 253, 0.2);
   }
   40% {
-    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
-      0 0 0 15px rgba(249, 92, 24, 0.2), 0 0 0 0 rgba(249, 92, 24, 0.2);
+    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
+      0 0 0 15px rgba(56, 163, 253, 0.2), 0 0 0 0 rgba(56, 163, 253, 0.2);
   }
   80% {
-    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
-      0 0 0 30px rgba(249, 92, 24, 0), 0 0 0 26.7px rgba(249, 92, 24, 0.067);
+    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
+      0 0 0 30px rgba(56, 163, 253, 0), 0 0 0 26.7px rgba(56, 163, 253, 0.067);
   }
   100% {
-    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
-      0 0 0 30px rgba(249, 92, 24, 0), 0 0 0 40px rgba(249, 92, 24, 0);
+    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
+      0 0 0 30px rgba(56, 163, 253, 0), 0 0 0 40px rgba(56, 163, 253, 0);
   }
 }
-@keyframes email-an {
+@keyframes hoverWave {
   0% {
-    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
-      0 0 0 0 rgba(249, 92, 24, 0.2), 0 0 0 0 rgba(249, 92, 24, 0.2);
+    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
+      0 0 0 0 rgba(56, 163, 253, 0.2), 0 0 0 0 rgba(56, 163, 253, 0.2);
   }
   40% {
-    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
-      0 0 0 15px rgba(249, 92, 24, 0.2), 0 0 0 0 rgba(249, 92, 24, 0.2);
+    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
+      0 0 0 15px rgba(56, 163, 253, 0.2), 0 0 0 0 rgba(56, 163, 253, 0.2);
   }
   80% {
-    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
-      0 0 0 30px rgba(249, 92, 24, 0), 0 0 0 26.7px rgba(249, 92, 24, 0.067);
+    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
+      0 0 0 30px rgba(56, 163, 253, 0), 0 0 0 26.7px rgba(56, 163, 253, 0.067);
   }
   100% {
-    box-shadow: 0 8px 10px rgba(249, 92, 24, 0.3),
-      0 0 0 30px rgba(249, 92, 24, 0), 0 0 0 40px rgba(249, 92, 24, 0);
+    box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3),
+      0 0 0 30px rgba(56, 163, 253, 0), 0 0 0 40px rgba(56, 163, 253, 0);
   }
 }
 
-@keyframes opsimple {
+/* animations icon */
+
+@keyframes shake {
   0% {
-    opacity: 0;
+    transform: rotateZ(0deg);
+    -ms-transform: rotateZ(0deg);
+    -webkit-transform: rotateZ(0deg);
+  }
+  10% {
+    transform: rotateZ(-30deg);
+    -ms-transform: rotateZ(-30deg);
+    -webkit-transform: rotateZ(-30deg);
+  }
+  20% {
+    transform: rotateZ(15deg);
+    -ms-transform: rotateZ(15deg);
+    -webkit-transform: rotateZ(15deg);
+  }
+  30% {
+    transform: rotateZ(-10deg);
+    -ms-transform: rotateZ(-10deg);
+    -webkit-transform: rotateZ(-10deg);
   }
   40% {
-    opacity: 1;
+    transform: rotateZ(7.5deg);
+    -ms-transform: rotateZ(7.5deg);
+    -webkit-transform: rotateZ(7.5deg);
   }
-
+  50% {
+    transform: rotateZ(-6deg);
+    -ms-transform: rotateZ(-6deg);
+    -webkit-transform: rotateZ(-6deg);
+  }
+  60% {
+    transform: rotateZ(5deg);
+    -ms-transform: rotateZ(5deg);
+    -webkit-transform: rotateZ(5deg);
+  }
+  70% {
+    transform: rotateZ(-4.28571deg);
+    -ms-transform: rotateZ(-4.28571deg);
+    -webkit-transform: rotateZ(-4.28571deg);
+  }
   80% {
-    opacity: 1;
+    transform: rotateZ(3.75deg);
+    -ms-transform: rotateZ(3.75deg);
+    -webkit-transform: rotateZ(3.75deg);
+  }
+  90% {
+    transform: rotateZ(-3.33333deg);
+    -ms-transform: rotateZ(-3.33333deg);
+    -webkit-transform: rotateZ(-3.33333deg);
   }
   100% {
-    opacity: 0;
+    transform: rotateZ(0deg);
+    -ms-transform: rotateZ(0deg);
+    -webkit-transform: rotateZ(0deg);
   }
 }
 
-@-webkit-keyframes opsimple {
+@-webkit-keyframes shake {
   0% {
-    opacity: 0;
+    transform: rotateZ(0deg);
+    -ms-transform: rotateZ(0deg);
+    -webkit-transform: rotateZ(0deg);
+  }
+  10% {
+    transform: rotateZ(-30deg);
+    -ms-transform: rotateZ(-30deg);
+    -webkit-transform: rotateZ(-30deg);
+  }
+  20% {
+    transform: rotateZ(15deg);
+    -ms-transform: rotateZ(15deg);
+    -webkit-transform: rotateZ(15deg);
+  }
+  30% {
+    transform: rotateZ(-10deg);
+    -ms-transform: rotateZ(-10deg);
+    -webkit-transform: rotateZ(-10deg);
   }
   40% {
-    opacity: 1;
+    transform: rotateZ(7.5deg);
+    -ms-transform: rotateZ(7.5deg);
+    -webkit-transform: rotateZ(7.5deg);
+  }
+  50% {
+    transform: rotateZ(-6deg);
+    -ms-transform: rotateZ(-6deg);
+    -webkit-transform: rotateZ(-6deg);
+  }
+  60% {
+    transform: rotateZ(5deg);
+    -ms-transform: rotateZ(5deg);
+    -webkit-transform: rotateZ(5deg);
+  }
+  70% {
+    transform: rotateZ(-4.28571deg);
+    -ms-transform: rotateZ(-4.28571deg);
+    -webkit-transform: rotateZ(-4.28571deg);
   }
   80% {
-    opacity: 1;
+    transform: rotateZ(3.75deg);
+    -ms-transform: rotateZ(3.75deg);
+    -webkit-transform: rotateZ(3.75deg);
+  }
+  90% {
+    transform: rotateZ(-3.33333deg);
+    -ms-transform: rotateZ(-3.33333deg);
+    -webkit-transform: rotateZ(-3.33333deg);
   }
   100% {
-    opacity: 0;
+    transform: rotateZ(0deg);
+    -ms-transform: rotateZ(0deg);
+    -webkit-transform: rotateZ(0deg);
   }
 }
-/* конец кнопки связи */
+/* конец кнопки звонка */
+
 .kal {
   display: grid;
   justify-content: center;
