--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -238,21 +238,15 @@
     </div>
     </div>
 </section>
-<button
-type="button"
-class="btn  mr-3"
-data-toggle="modal"
-data-target="#exampleModal"
->
-Записаться
-</button>
+
 
 <section class="kal">
   <div type="button" class="callback-bt">
     <a href="tel:{{ site_phone }}">
+      записаться
     <div class="text-call">
         <i class="fa fa-phone"></i>
-        <span>Записаться</span>
+        
     </div>
   </a>
 </div>
