--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -243,7 +243,7 @@
 <section class="kal">
   <div type="button" class="callback-bt">
     <a href="tel:{{ site_phone }}">
-      записаться
+      <span>Запись</span>
     <div class="text-call">
         <i class="fa fa-phone"></i>
         
