--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -40,7 +40,7 @@ section {
 .card-body {
   height: 150px;
   color: #000;
-  background: rgba(161,21,207, 0.2);***
+  background: rgba(161, 21, 207, 0);
 }
 .soc {
   display: grid;
