--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -246,7 +246,7 @@
           <!-- UI Item Starts -->
           <div class="ui-item">
             <!-- Image -->
-            <img src="img/ui-4/1.jpg" alt="" class="img-responsive"/>
+            <img src="{{ url_for('static', filename=service.image) }}" alt="" class="img-responsive"/>
             <!-- UI Content Starts -->
             <div class="ui-content ui-bg-red">
               <!-- Heading -->
@@ -271,7 +271,7 @@
           <!-- UI Item Starts -->
           <div class="ui-item">
             <!-- Image -->
-            <img src="img/ui-4/2.jpg" alt="" class="img-responsive"/>
+            <img src="{{ url_for('static', filename=service.image) }}" alt="" class="img-responsive"/>
             <!-- UI Content Starts -->		
             <div class="ui-content ui-bg-blue">
               <!-- Heading -->
@@ -296,7 +296,7 @@
           <!-- UI Item Starts -->
           <div class="ui-item">
             <!-- Image -->
-            <img src="img/ui-4/3.jpg" alt="" class="img-responsive"/>
+            <img src="{{ url_for('static', filename=service.image) }}" alt="" class="img-responsive"/>
             <!-- UI Content Starts -->
             <div class="ui-content ui-bg-yellow">
               <!-- Heading -->
@@ -321,7 +321,7 @@
           <!-- UI Item Starts -->
           <div class="ui-item">
             <!-- Image -->
-            <img src="img/ui-4/4.jpg" alt="" class="img-responsive"/>
+            <img src="{{ url_for('static', filename=service.image) }}" alt="" class="img-responsive"/>
             <!-- UI Content Starts -->	
             <div class="ui-content ui-bg-green">							
               <!-- Heading -->
@@ -346,7 +346,7 @@
           <!-- UI Item Starts -->
           <div class="ui-item">
             <!-- Image -->
-            <img src="img/ui-4/5.jpg" alt="" class="img-responsive"/>
+            <img src="{{ url_for('static', filename=service.image) }}" alt="" class="img-responsive"/>
             <!-- UI Content Starts -->		
             <div class="ui-content ui-bg-lblue">
               <!-- Heading -->
@@ -371,7 +371,7 @@
           <!-- UI Item Starts -->	
           <div class="ui-item">
             <!-- Image -->
-            <img src="img/ui-4/6.jpg" alt="" class="img-responsive"/>	
+            <img src="{{ url_for('static', filename=service.image) }}" alt="" class="img-responsive"/>	
             <!-- UI Content Starts -->
             <div class="ui-content ui-bg-rose-pink">
               <!-- Heading -->
@@ -396,7 +396,7 @@
           <!-- UI Item Starts -->
           <div class="ui-item">
             <!-- Image -->
-            <img src="img/ui-4/7.jpg" alt="" class="img-responsive"/>
+            <img src="{{ url_for('static', filename=service.image) }}" alt="" class="img-responsive"/>
             <!-- UI Content Starts -->
             <div class="ui-content ui-bg-orange">
               <!-- Heading -->
@@ -421,7 +421,7 @@
           <!-- UI Item Starts -->
           <div class="ui-item">
             <!-- Image -->
-            <img src="img/ui-4/8.jpg" alt="" class="img-responsive"/>
+            <img src="{{ url_for('static', filename=service.image) }}" alt="" class="img-responsive"/>
             <!-- UI Content Starts -->
             <div class="ui-content ui-bg-brown">
               <!-- Heading -->
