--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -242,15 +242,13 @@
 
 
 <section class="kal">
-  <div type="button" class="callback-bt">
-    <a href="tel:{{ site_phone }}">
-      
-    <div class="text-call">
-        <i class="fa fa-phone"></i>
-        
+  <div type="button round" class="callback-bt " data-toggle="modal" data-target="#exampleModal">
+    <div class="text-call ">
+      <a href="https://wa.me/79370969944/" target="_blank"></a>
+      <i class="fa fa-phone"></i></a>
+      <span>Записаться</span>
     </div>
-  </a>
-</div>
+  </div>
 </section>
 <section id="section-contacts" class="section-common">
  
