--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -242,7 +242,7 @@
 
 
 <section class="kal">
-  <div type="button round" class="callback-bt " data-toggle="modal" data-target="#exampleModal">
+  <div type="button round" class="callback-bt " >
     <div class="text-call ">
       <a href="https://wa.me/79370969944/" target="_blank"></a>
       <i class="fa fa-phone"></i></a>
