--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -242,13 +242,15 @@
 
 
 <section class="kal">
+  <a href="https://wa.me/79370969944/" target="_blank">
   <div type="button round" class="callback-bt " >
     <div class="text-call ">
-      <a href="https://wa.me/79370969944/" target="_blank"></a>
+      <a href="https://wa.me/79370969944/" target="_blank">
       <i class="fa fa-phone"></i></a>
       <span>Записаться</span>
     </div>
   </div>
+</a>
 </section>
 <section id="section-contacts" class="section-common">
  
