--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -238,7 +238,92 @@
     </div>
     </div>
 </section>
-
+section id="mi">
+  <h2 class="text-center">Наши мастера</h2>
+  <div class="ui-95">
+		
+    <div class="container ">
+    
+      <div class="row">
+        <div class="col-md-4 col-sm-6">
+          <div class="ui-item">
+            <img src="{{ url_for('static', filename='css/images/elena.jpg') }}" class="img-responsive" alt=""/>
+            <h3>Елена <a href="https://wa.me/79370969944/" target="_blank"><i class="fab fa-whatsapp"></i></a></h3>
+            
+            <h4>Парикмахер</h4>
+            
+            <!-- Social media Starts -->
+           
+            <!-- Social media Ends -->
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <div class="ui-item">
+            <img src="{{ url_for('static', filename='css/images/daha.jpg') }}" class="img-responsive"  alt=""/>
+            <h3>Дарья <a href="https://wa.me/79370969944/" target="_blank"><i class="fab fa-whatsapp"></i></a></h3>
+            
+            <h4>Парикмахер</h4>
+            
+            <!-- Social media Starts -->
+           
+            <!-- Social media Ends -->
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <div class="ui-item">
+            <img src="{{ url_for('static', filename='css/images/mari.jpg') }}" class="img-responsive" alt=""/>
+            <h3>Марина <a href="https://wa.me/79370969944/" target="_blank"><i class="fab fa-whatsapp"></i></a></h3>
+            
+            <h4>Парикмахер <br>Барбер</h4>
+            
+            <!-- Social media Starts -->
+           
+            <!-- Social media Ends -->
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <div class="ui-item">
+            <img src="{{ url_for('static', filename='css/images/vika.jpg') }}" class="img-responsive" alt=""/>
+            <h3>Виктория <a href="https://wa.me/79370969944/" target="_blank"><i class="fab fa-whatsapp"></i></a></h3>
+            
+            <h4>Мастер маникюра</h4>
+            
+            <!-- Social media Starts -->
+           
+            <!-- Social media Ends -->
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <div class="ui-item">
+            <img src="{{ url_for('static', filename='css/images/eka.jpg') }}" class="img-responsive" alt=""/>
+            <h3>Екатерина <a href="https://wa.me/79370969944/" target="_blank"><i class="fab fa-whatsapp"></i></a></h3>
+            
+            <h4>Визажист</h4>
+            
+            <!-- Social media Starts -->
+           
+            <!-- Social media Ends -->
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6">
+          <div class="ui-item">
+            <img src="{{ url_for('static', filename='css/images/maha.jpg') }}" class="img-responsive" alt=""/>
+            <h3>Мария <a href="https://wa.me/79370969944/" target="_blank"><i class="fab fa-whatsapp"></i></a></h3>
+            
+            <h4>Мастер шугаринга</h4>
+            
+            <!-- Social media Starts -->
+           
+            <!-- Social media Ends -->
+          </div>
+        </div>
+      </div>
+    
+    </div>
+  
+  </div>
+  
+</section>
 
 
 <section class="kal">
