--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -238,7 +238,7 @@
     </div>
     </div>
 </section>
-section id="mi">
+<section id="mi">
   <h2 class="text-center">Наши мастера</h2>
   <div class="ui-95">
 		
