--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -750,3 +750,8 @@ ul li i:after {
   color: #eee;
   margin: 1%;
 }
+@media (max-width: 560px) {
+  #mi {
+    background-attachment: local;
+  }
+}
