--- a/app/templates/includes/main.html
+++ b/app/templates/includes/main.html
@@ -40,6 +40,11 @@
           <h5>Контакты</h5>
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#mi">
+          <h5>Мастера</h5>
+        </a>
+      </li>
     </ul>
     <div>
       <button
