--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -706,7 +706,7 @@ ul li i:after {
 .ui-95 .ui-item h4 {
   font-size: 13px;
   line-height: 23px;
-  color: gray;
+  color: black;
   font-weight: 400;
 }
 .ui-95 .ui-item .fclick {
