--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -274,7 +274,7 @@
             <img src="{{ url_for('static', filename='css/images/mari.jpg') }}" class="img-responsive" alt=""/>
             <h3>Марина <a href="https://wa.me/79377233024/" target="_blank"><i class="fab fa-whatsapp"></i></a></h3>
             
-            <h4>Парикмахер <br>Барбер</h4>
+            <h4>Парикмахер,Барбер</h4>
             
             <!-- Social media Starts -->
            
